Fix centering for image grid on app pages on mobile

--- a/src/css/partials/project.scss
+++ b/src/css/partials/project.scss
@@ -102,32 +102,19 @@ h4 {
   margin-top: 30px
 }
 
-@media only screen
-and (max-width : 640px) {
+ul {
+  text-align: center;
+  li {
+    max-width: 300px;
+    list-style-type: none;
+    display: inline;
 
-    h1 {
-      margin-top: 30px;
-      font-size: 40px;
+    img {
+      max-width: 300px;
+      border-radius: 5px;
+      margin: 15px 10px;
+      box-shadow: 0px 1px 4px 0px rgba(15,73,138,0.4);
     }
-
-    h2 {
-      line-height: 22px;
-      font-size: 18px;
-    }
-
-    a {
-      font-size: 17px;
-    }
-
-    .body-text {
-      line-height: 34px;
-      font-size: 16px;
-      font-family: $regular, $fallback;
-      color: $textColor;
-    }
-
-    #interface {
-      margin: 0 15px 0 15px;
-    }
-
+  }
 }
+
