--- a/src/dated/dated.scss
+++ b/src/dated/dated.scss
@@ -21,22 +21,10 @@
   margin-bottom: 20px;
 }
 
-ul {
-  text-align: center;
-  li {
-    max-width: 300px;
-    list-style-type: none;
-    display: inline;
+//Global project styling for mobile
+@import "../css/partials/project-mobile.scss";
 
-    img {
-      max-width: 300px;
-      border-radius: 5px;
-      margin: 15px 10px;
-      box-shadow: 0px 1px 4px 0px rgba(15,73,138,0.4);
-    }
-  }
-}
-
+//Page specific
 @media only screen
 and (max-width : 640px) {
 
@@ -59,26 +47,5 @@ and (max-width : 640px) {
     #demo {
       margin-top: 70px;
     }
-
-    ul {
-      text-align: center;
-      margin: 0 auto;
-      max-width: 300px;
-      padding-left: 0px;
-      li {
-        max-width: 300px;
-        list-style-type: none;
-        display: block;
-        text-align: center;
-
-        img {
-          text-align: center;
-          max-width: 300px;
-          border-radius: 5px;
-          margin: 15px 0px;
-          box-shadow: 0px 1px 4px 0px rgba(15,73,138,0.4);
-        }
-      }
-    } 
 
 }
